<resources>
    <string name="app_name">Grateful</string>
    <string name="app_tag_line">Think Positive</string>
    <string name="tag_name">Keep track of your daily beans. Reflect daily.</string>
    <string name="tag_line">Share Something You\'re Grateful for Everyday</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="logon_button_text">Sign In</string>
    <string name="dialog.message.loading">Loading…</string>
    <string name="invite.title.label">Invite Your Friends</string>
    <string name="invite.message.label">Join me on Grateful. Share the things you\'re grateful for. You know, like me.</string>
    <string name="menu_label_quote">Generate Quote</string>
    <string name="menu_label_submit">Submit</string>
    <string name="menu_label_invites">Invite Friends</string>
    <string name="menu.label.terms">Terms &amp; Conditions</string>
    <string name="menu.label.privacy">Privacy Policy</string>
    <string name="menu.label.feedback">Provide Feedback</string>
    <string name="menu.label.logoff">Log Off</string>
    <string name="drawer.open">Open Drawer</string>
    <string name="drawer.close">Close Drawer</string>
    <string name="navigation_menu_personal_submits">My Posts</string>
    <string name="navigation_menu_all_submits">Public Posts</string>
    <string name="navigation_menu_journal_public">Public Journal</string>
    <string name="navigation_menu_invite">Invite Friends</string>
    <string name="navigation_menu_signout">Log Off</string>
    <string name="navigation_menu_user_posts">My Posts</string>
    <string name="navigation_menu_public_post">All Posts</string>
    <string name="navigation_menu_tag_list">Tag List</string>
    <string name="navigation_menu_user_journal">Your Entries</string>
    <string name="navigation_menu_public_journal_feed">Public Journal Feed</string>
    <string-array name="navigation_labels">
        <item>@string/navigation_menu_public_post</item>
        <item>@string/navigation_menu_user_posts</item>
        
        
        <item>@string/navigation_menu_invite</item>
        <item>@string/navigation_menu_signout</item>
    </string-array>
    <string name="radio_label_post">Post</string>
    <string name="radio_label_journal">Journal</string>
    <string name="switch_label_public">Entry Will Be Public</string>
    <string name="switch_label_private">Entry Will Be Private</string>
    <string name="submit.grateful.title">Remember to stay Grateful</string>
    <string name="submit.privacy.text">Keep this private? (Only for posts)</string>
    <string name="submit.hint.post">What are you grateful for? (300 char limit)</string>
    <string name="submit.hint.journal">Describe what you\'re grateful for in detail (2000 char limit)</string>
    <string name="submit.button">Submit</string>
    <string name="submit_error_post_title_text">Enter a Title</string>
    <string name="submit_error_journal_text">Enter a journal entry</string>
    <string name="item_post_displayname">Member shared…</string>
    <string name="item_post_short_text">This is what I am grateful about</string>
    <string name="item_post_long_text">If this is a journal entry than there will be a lot of text that follows this part of the item.</string>
    <string name="item_tv_timestamp">December 13, 2017</string>
    <string name="navi_tv_displayname_placeholder">Welcome Username</string>
    <string name="navi_tv_welcome_user">Welcome</string>
    <string name="new_feedback_title">We Want Your Feedback (Max 300 characters)</string>
    <string name="feedback_hint">We want to hear from you.</string>
    <string name="item_tv_comment_count">Comment</string>
    <string name="next_button_text">Next</string>
    <string name="tv_quote_inspire_daily">Inspire Yourself…</string>
    <string name="tv_close_quote">Close</string>
    <string name="tv_user_wrote">You Wrote…</string>
    <string name="tv_user_journal_wrote">Your Journal Entries</string>
    <string name="tv_today_feeling">I\'m Feeling</string>
    <string name="material_dialog_submit_feedback">We want to hear from you</string>
    <string name="material_dialog_feedback_content">Let us know what you think</string>
    <string name="material_dialog_feedback_hint">Comments, feedback, suggestions.</string>
    <string name="material_dialog_feedback_prefill"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_upload_image">Upload Image</string>
    <string name="terms_headline">Terms \u0026 Condition</string>
    <string name="terms_condition_full_statement"><b>Our Terms</b>\n\nGrateful was designed to share your feelings of appreciation to the rest of the world. Let others see and read about your own personal stories of excitement and accomplishment. While we welcome freedom of speech we will not tolerate hate speech of any kind including but not limited to the following.\n\nThis is a Quick rundown:\nNo publicly naming any individual\nNo threatening another member\nNo insulting another member\nNo targeting hate speech\nNo messages meant to incite violence\nNo flame wars\nNo spamming\n\nCommunicate respectfully with all member participants, let\'s make the effort to keep the conversations free of any conflict.\n\nYou can respectfully disagree with someone, but there\'s no need to escalate these discussions into arguments.\n\nAs a general rule, it\'s always a good idea to assume the best intentions from people.\n\nDo not send comments to other member participants that can be seen as harassment. This includes, but is not limited to, flirting, hostile messages, personal attacks or remarks on their physical appearance. Do not share any content that is obscene, illicit, threatening, or discriminatory.\n\nA good rule to go by is that if you really need to ask if it\'s allowed, then it\'s probably easier to skip sharing it.\n\nBe considerate and respectful of others as hurtful language will not be tolerated. Sexist, racist and other exclusionary remarks risk your account being removed from our services from the very first offense.\n\nAvoid spamming the community, members, and our services in general.\n\nDo not discuss politics, religion or any other topics that could be considered a slippery slope. While we understand these may be important topics for some of you to discuss, ultimately, this community is here for you to rant about work issues not your opinion on other topics.\n\nPlease respect the administrators of this community\n\nAnything that the administrator deems offensive will be removed and the member who published the offense will be barred from rejoining the community.</string>
    <string name="privacy_policy_headline">Privacy Policy</string>
    <string name="setting_quotes_show_quote_on_load">Show new quote?</string>
    <string name="setting_quotes_settings_key">quote_request_status</string>
    <string name="setting_quote_display_true">Show Quotes</string>
    <string name="setting_quote_display_false">Hide Quotes</string>
    <string name="setting_publishing_title">Default post status (Can be changed for individual posts)</string>
    <string name="setting_option_publishing_settings_key">post_publish_status</string>
    <string name="setting_publishing_summary_off">Set Post Private</string>
    <string name="setting_publishing_summary_on">Set Post Public</string>
</resources>